--- a/css/screen.css
+++ b/css/screen.css
@@ -1,5 +1,5 @@
 @charset 'utf-8';
-@import url(reset.css);
+@import url(normalize.css);
 @import url(fancybox.css);
 
 /* ----------------------------------------------------- Comment */
