--- a/css/screen.css
+++ b/css/screen.css
@@ -1,4 +1,4 @@
-@import url(normalize.css);
+@import url(reset_some_things.css);
 
 /* ----------------------------------------------------- Comment */
 
