always show scrollbars
this fixes the "jumping" of sites with scrollbars in comparison to
sites without scrollbars.

--- a/css/reset_some_things.css
+++ b/css/reset_some_things.css
@@ -29,3 +29,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+html {
+     overflow: -moz-scrollbars-vertical;
+     overflow: scroll;
+}
