--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,15 @@
-@import url(reset_some_things.css);
+@import url(mini-reset.css);
 
-/* ----------------------------------------------------- Comment */
+/* ----------------------------------------------------- Browser specific CSS */
 
 .js div { } /* apply only on JavaScript enabled browsers */
 .ie7 div { } /* apply only on Internet Explorer 7 and below */
 .ie6 div { } /* apply only on Internet Explorer 6 and below */
+
+/* ----------------------------------------------------- smaller screens */
+
+@media only screen and (max-width: 640px) { }
+
+/* ----------------------------------------------------- huge screens */
+
+@media only screen and (min-width: 1280px) { }
