Inherited font family for input & textarea

--- a/css/mini-reset.css
+++ b/css/mini-reset.css
@@ -10,7 +10,7 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video, main {
+time, mark, audio, video, main, input, textarea {
 	margin: 0;
 	padding: 0;
 	border: 0;
