--- a/css/mini-reset.css
+++ b/css/mini-reset.css
@@ -1,25 +1,23 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video, main, input, textarea {
+/*
+ :::  Reset
+-------------------------------------------------- */
+html {
+	box-sizing: border-box;
+	overflow-y: -moz-scrollbars-vertical;
+	overflow-y: scroll;
+}
+*, *::before, *::after {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
+	box-sizing: inherit;
+	-webkit-text-size-adjust: 100%;
+	text-size-adjust: 100%;
 }
-/* HTML5 display-role reset for shitty browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, main {
+article, aside, details, figcaption, figure,
+footer, header, hgroup, main, nav, section, subhead, summary {
 	display: block;
 }
 ol, ul {
@@ -29,7 +27,4 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-html {
-	overflow-y: -moz-scrollbars-vertical;
-	overflow-y: scroll;
-}
+/*-------------------------------------------------- */
